2009-09-15  Tristan Gingold  <gingold@adacore.com>

	* makefile.vms (OBJS): Compile te-vms.c only on Itanium.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10637
	* config/tc-i386-intel.c (intel_state): Add has_offset.
	(i386_intel_simplify): Set intel_state.has_offset to 1 for
	O_offset.
	(i386_intel_operand): Turn on intel_state.is_mem if
	intel_state.has_offset is 0 and the last char is ']'.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10636
	* config/tc-i386.c (optimize_disp): Set disp32 for 64bit only
	if there is an ADDR_PREFIX.
	(i386_finalize_displacement): Repor error if signed 32bit
	displacement is out of range.

2009-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (MIPS_JALR_HINT_P): Take an expr argument.
	Require the target to be a bare symbol on targets with
	in-place addends.
	(macro_build_jalr): Update accordingly.
	(mips_fix_adjustable): Don't reduce R_MIPS_JALRs on targets
	with in-place addends.

2009-09-11  Nick Clifton  <nickc@redhat.com>

	* po/gas.pot: Updated by the Translation project.

2009-09-11  Martin Thuresson  <martint@google.com>

	* as.c (main): Call dwarf2_init.
	* config/obj-elf.c (struct group_list): New field.
	(build_group_lists): Use hash lookup.
	(free_section_idx): New function.
	(elf_frob_file): Adjust.
	* dwarf2dbg.c (all_segs_hash, last_seg_ptr): New variables.
	(get_line_subseg): Adjust.
	(dwarf2_init): New function.
	* dwarf2dbg.h (dwarf2_init): New declaration.

2009-09-11  Martin Thuresson  <martint@google.com>

	Updated sources to compile cleanly with -Wc++-compat:
	* app.c: Add casts.
	* as.c: Add casts.
	* config/obj-elf.c: Add casts.
	(obj_elf_type): Rename variable typename to type_name.
	* config/tc-i386-intel.c (i386_operators): Rename member operator to op.
	* config/tc-i386.c: Add casts.
	(check_cpu_arch_compatible): Rename argument new to new_flag.
	(gotrel): Update variable to use enum name instead of integer value.
	* dw2gencfi.c: Add casts.